fixed scrollbar problem

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -1,21 +1,20 @@
 html, body {
     height: 100%;
-    min-width: 960px;
     background-color: #110039;
     margin: 0;
+    min-width: 960px;
     padding: 0;
+}
+
+
+#main {
+    overflow: hidden;
+    padding: 50px;
 }
 
 #wrapper {
     min-height: 100%;
     border-right: 350px solid white;
-}
-
-#main {
-    overflow: auto;
-	padding: 0px 50px 35px 50px;
-    position: relative;
-
 }
 
 #logos {
@@ -110,7 +109,6 @@ a:active {
     border: 1px solid red;
     height: auto;
     position: relative;
-    width: 100%;
 }
 
 #frontpage_header div {
